Barra navegacion y secciones

--- a/index.html
+++ b/index.html
@@ -4,8 +4,41 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dulces Saludables</title>
+  <link rel="stylesheet" href="css/index.css" />
+  <link rel="stylesheet" href="css/footer.css" />
 </head>
 <body>
-  
+    <!-- Barra de navegación -->
+    <nav id="navbar">
+      <ul id="menu">
+        <li class="logo">
+          <img class="logo" src="images/sandia.png" alt="logo" />
+        </li>
+        <li><a href="#nosotros">Nosotros</a></li>
+        <li><a href="#servicios">Servicios</a></li>
+        <li><a href="#resenas">Reseñas</a></li>
+      </ul>
+    </nav>
+
+    <!-- Sección Nosotros -->
+    <section id="nosotros">
+    </section>
+
+    <!-- Sección Servicios -->
+    <section id="servicios">
+    </section>
+
+    <!-- Sección Reseñas -->
+    <section id="resenas">
+    </section>
+
+    <!-- Pié de página -->
+    <footer>
+      <ul>
+        <li><a href="https://twitter.com" target="_blank">Twitter</a></li>
+        <li><a href="https://facebook.com" target="_blank">Facebook</a></li>
+        <li><a href="https://instagram.com" target="_blank">Instagram</a></li>
+      </ul>
+    </footer>
 </body>
 </html>
