secciones banner y nosotros

--- a/index.html
+++ b/index.html
@@ -20,8 +20,32 @@
       </ul>
     </nav>
 
+    <!-- Banner -->
+    <header id="banner">
+      <h1>Dulces Saludables</h1>
+      <img class="logo tembloroso" src="images/sandia.png" alt="logo" />
+      <p>Deliciosos y nutritivos, para que disfrutes sin culpa</p>
+    </header>
+
     <!-- Sección Nosotros -->
     <section id="nosotros">
+      <div class="images">
+        <img src="images/nosotros-1.jpeg" alt="Catering saludable" />
+        <img src="images/nosotros-2.jpeg" alt="Atención personalizada" />
+        <img src="images/nosotros-3.jpeg" alt="Postres saludables" />
+        <img src="images/nosotros-4.jpeg" alt="Delicia sin culpa" />
+      </div>
+      <div class="contenido">
+        <h2>Acerca de nosotros</h2>
+        <p>
+          En Dulce y Salud nos dedicamos a crear postres artesanales que no solo
+          son deliciosos, sino también saludables. Utilizamos ingredientes
+          frescos y nutritivos para ofrecer opciones que transforman cualquier
+          ocasión en una experiencia dulce sin comprometer el bienestar. Nuestro
+          compromiso es demostrar que lo saludable puede ser igual de tentador y
+          placentero.
+        </p>
+      </div>
     </section>
 
     <!-- Sección Servicios -->
