estilos banner, navbar y servicios

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dulces Saludables</title>
   <link rel="stylesheet" href="css/index.css" />
+  <link rel="stylesheet" href="css/navbar.css" />
+  <link rel="stylesheet" href="css/banner.css" />
+  <link rel="stylesheet" href="css/nosotros.css" />
+  <link rel="stylesheet" href="css/servicios.css" />
   <link rel="stylesheet" href="css/footer.css" />
 </head>
 <body>
@@ -50,6 +54,39 @@
 
     <!-- Sección Servicios -->
     <section id="servicios">
+      <h2>Servicios</h2>
+      <div class="tarjetas">
+        <div class="servicio">
+          <h3>Pastelería Personalizada</h3>
+          <p>
+            Adaptados a preferencias dietéticas como sin azúcar, sin gluten, o
+            veganos, para ocasiones especiales como cumpleaños, bodas y eventos
+            corporativos.
+          </p>
+        </div>
+        <div class="servicio">
+          <h3>Servicio de Catering Saludable</h3>
+          <p>
+            Menús completos de postres saludables para eventos, reuniones o
+            celebraciones, con opciones nutritivas que no comprometen el sabor.
+          </p>
+        </div>
+        <div class="servicio">
+          <h3>Talleres de Repostería Saludable</h3>
+          <p>
+            Clases y talleres prácticos para enseñarte a preparar postres
+            saludables en casa, utilizando ingredientes frescos y nutritivos.
+          </p>
+        </div>
+        <div class="servicio">
+          <h3>Suscripción a Cajas de Postres</h3>
+          <p>
+            Recibe una selección variada de postres saludables y artesanales
+            directamente en tu casa, con opciones según tus necesidades
+            dietéticas.
+          </p>
+        </div>
+      </div>
     </section>
 
     <!-- Sección Reseñas -->
