--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="css/banner.css" />
   <link rel="stylesheet" href="css/nosotros.css" />
   <link rel="stylesheet" href="css/servicios.css" />
+  <link rel="stylesheet" href="css/resenas.css" />
   <link rel="stylesheet" href="css/footer.css" />
 </head>
 <body>
@@ -27,7 +28,7 @@
     <!-- Banner -->
     <header id="banner">
       <h1>Dulces Saludables</h1>
-      <img class="logo tembloroso" src="images/sandia.png" alt="logo" />
+      <img class="logo" src="images/sandia.png" alt="logo" />
       <p>Deliciosos y nutritivos, para que disfrutes sin culpa</p>
     </header>
 
@@ -91,6 +92,33 @@
 
     <!-- Sección Reseñas -->
     <section id="resenas">
+      <h2>Reseñas</h2>
+      <ul>
+        <li>
+          <blockquote>
+            "Excelentes pasteles y servicio. 100% recomendado!"
+          </blockquote>
+          <p><span class="stars">⭐⭐⭐⭐⭐</span> Juan P.</p>
+        </li>
+        <li>
+          <blockquote>
+            "El mejor catering que he probado. ¡Delicioso y saludable!"
+          </blockquote>
+          <p><span class="stars">⭐⭐⭐⭐⭐</span> María L.</p>
+        </li>
+        <li>
+          <blockquote>
+            "Mis invitados quedaron fascinados con los bocaditos."
+          </blockquote>
+          <p><span class="stars">⭐⭐⭐⭐⭐</span> Pedro A.</p>
+        </li>
+        <li>
+          <blockquote>
+            "Un servicio increíble y productos deliciosos."
+          </blockquote>
+          <p><span class="stars">⭐⭐⭐⭐</span> Sofía G.</p>
+        </li>
+      </ul>
     </section>
 
     <!-- Pié de página -->
